configuration site name

--- a/docs/2.使用依赖注入并读取配置文件内容.md
+++ b/docs/2.使用依赖注入并读取配置文件内容.md
@@ -1,2 +1,27 @@
 ## 使用依赖注入并读取配置文件
 
+演示一下如何简单的读取配置内容。
+
+1. 在`appsetting.json`中增加自定义的配置项`SiteName`
+
+    ![addconfig](images/add-config-sitename.jpg)
+
+2. 在`HomeController`的构造函数中注入`IConfiguration`服务，并在`Index`里读取配置值，传递给ViewData
+
+    ![add-contraller-website](images/add-contraller-website.jpg)
+
+3. 修改`_layout.cshtml`,显示ViewData值
+
+    ![add-layout-sitename](images/add-layout-sitename.jpg)
+
+4. 到这里，运行程序，打开页面就能看到配置`SiteName`的值`ShopsHub`已经显示到页面的Title上了。
+
+    ![title-sitename](images/title-sitename.jpg)
+
+关于如何获取配置中的值，参考[微软文档](https://docs.microsoft.com/zh-cn/aspnet/core/fundamentals/configuration/)
+
+## 自定义服务如何使用依赖注入
+
+上面我使用了内置的`IConfiguration`服务，下面演示一下怎样使用一个自己的服务。
+习惯上，我要把业务代码放在单独的工程内，这样更清晰并易于维护。
+
