--- a/docs/1.创建项目.md
+++ b/docs/1.创建项目.md
@@ -4,7 +4,7 @@
 
 2. 用命令行创建一个空的解决方案文件，`dotnet new sln`。
 
-    <img src="images/dotnetnewsln.jpg" class="dotnetnewsln" />
+    ![dotnetnewsln](images/dotnetnewsln.jpg)
 
 3. 按照我的习惯，创建一个src目录，用于存放项目文件。
 4. 用visual studio 2019打开`Shopshub.sln`文件，在解决方案中也添加src目录，与文件目录对应。
