--- a/docs/2.使用依赖注入并读取配置文件内容.md
+++ b/docs/2.使用依赖注入并读取配置文件内容.md
@@ -25,3 +25,50 @@
 上面我使用了内置的`IConfiguration`服务，下面演示一下怎样使用一个自己的服务。
 习惯上，我要把业务代码放在单独的工程内，这样更清晰并易于维护。
 
+1. 在解决方案中添加一个库项目`Shopshub.Application`
+
+    ![add-project-lib](images/add-project-lib.jpg)
+
+2. 添加项目后，在`Shopshub.Web`中添加对`Shopshub.Application`的引用
+
+    ![add-project-application](images/add-project-application.jpg)
+
+3. 在项目中添加接口和服务，并且把上一节中在HomeController注入的IConfiguration迁移过来
+
+IShopServcie
+
+```csharp
+public interface IShopServcie
+{
+   string GetSiteName();
+}
+```
+
+ShopServcie
+
+```csharp
+public class ShopServcie : IShopServcie
+{
+    private readonly IConfiguration _configuration;
+    public ShopServcie(IConfiguration configuration)
+    {
+        _configuration = configuration;
+    }
+    public string GetSiteName()
+    {
+        return _configuration["SiteName"];
+    }
+}
+```
+
+4. 注入服务
+
+在`Startup.cs`的`ConfigureServices`部分可以进行注入
+
+![Injection-shopservice](images/Injection-shopservice.jpg)
+
+5. 把`HomeController`中的`IConfiguration`替换为自定义的服务
+
+![use-shopservice](images/use-shopservice.jpg)
+
+6. 到此，自定义的服务就可以使用了，以后就可以愉快的写业务代码了。
