--- a/docs/6.身份安全.md
+++ b/docs/6.身份安全.md
@@ -21,3 +21,7 @@ services.AddAuthentication(JwtBearerDefaults.AuthenticationScheme)
 
 
 身份验证的三种结果：成功、禁止、挑战（chanllenge）
+
+3. 使用Cookie进行身份验证
+
+4. 使用Role授权方案
